--- a/app/components/ShotInfoPanel.module.scss
+++ b/app/components/ShotInfoPanel.module.scss
@@ -14,6 +14,10 @@
   backdrop-filter: blur(2px);
   user-select: none;
   transition: opacity 0.2s ease;
+  touch-action: none; /* Prevent default touch behaviors */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .shotInfoPanel:hover {
